--- a/KotlinDemo/AndroidDemo/app/src/main/res/layout/activity_main.xml
+++ b/KotlinDemo/AndroidDemo/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="84dp"
-        android:autofillHints="@string/name"
+        android:autofillHints=""
         android:inputType="text"
         app:layout_constraintLeft_toLeftOf="@id/textViewName"
         app:layout_constraintTop_toTopOf="parent"
@@ -44,7 +44,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="72dp"
-        android:autofillHints="@string/password"
+        android:autofillHints=""
         android:inputType="textPassword"
         app:layout_constraintLeft_toLeftOf="@id/textViewPassword"
         app:layout_constraintTop_toTopOf="@id/editTextName"
